--- a/src/index.scss
+++ b/src/index.scss
@@ -82,6 +82,12 @@ a {
     padding:10px;
     border-radius:20px;
   }
+  .err{
+    font-family:$accent-font;
+    color:$light-blue;
+    margin: 0 10%;
+    text-align: center;
+  }
 } // end .landing
 
 .places{
@@ -95,7 +101,6 @@ a {
   .place-list{
     width:94%;
     margin:0 3%;
-
   }
   .place-summary {
     color:$light-grey;
