replaced BrowserRouter with HashRouter for github pages support

--- a/src/index.scss
+++ b/src/index.scss
@@ -139,6 +139,9 @@ a {
      padding:10px;
      border-radius:20px;
    }
+   .category{
+     font-size:1.25em;
+   }
  } //end .place-details
 
 
